# polyglott

./: .env.example  README.md  pyproject.toml
doc/developers/: GUI_FRAMEWORK_ANALYSIS.md  architecture.md  contributing.md
doc/llm/: golden_rules.md  kokoro_tts.md  moonshine_asr.md  ollama.md  piper_tts.md  silero_vad.md  ten_vad.md
doc/llm/planning/: 00_overview.md  01_core_infrastructure.md  02_audio_pipeline.md  03_speech_processing.md  04_llm_integration.md  05_user_interface.md  06_testing_polish.md
doc/user/: faq.md  getting_started.md
src/polyglott/: __init__.py  cli.py  config.py  constants.py  persistence.py
src/polyglott/audio/: __init__.py  pipeline.py  player.py  recorder.py
src/polyglott/conversation/: __init__.py  manager.py  session.py
src/polyglott/gui/: __init__.py  app.py  components.py  theme.py
src/polyglott/llm/: __init__.py  prompts.py  tutor.py
src/polyglott/stt/: __init__.py  transcriber.py
src/polyglott/tts/: __init__.py  synthesizer.py
src/polyglott/utils/: __init__.py  text.py
src/polyglott/vad/: __init__.py  base.py  detector.py  ten_vad.py
tests/: __init__.py  conftest.py
tests/audio/: __init__.py  test_pipeline.py  test_player.py  test_recorder.py
tests/conversation/: __init__.py  test_session.py
tests/integration/: __init__.py  test_component_integration.py  test_conversation_flow.py
tests/llm/: __init__.py  test_tutor.py
tests/stt/: __init__.py  test_transcriber.py
tests/tts/: __init__.py  test_synthesizer.py
tests/utils/: test_text.py
tests/vad/: __init__.py  test_detector.py
